[package]
name = "eve_mapper"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.7.2", features = ["serde"] }
base64 = "0.12.3"
env_logger = "0.7.1"
flexbuffers = "2.0.0"
fontdue = "0.7"
futures = "0.3.12"
futures-intrusive = "0.4.0"
log = "0.4.8"
petgraph = "0.5.0"
png = "0.16.6"
rand = "0.8.3"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.53"
sha2 = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-std = { version = "1.9.0", features = ["unstable"] }
byteorder = "1.3.4"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.46"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
wasm-timer = "0.2.5"
web-sys = { version =  "0.3.46", features = ["console", "Element", "Window","Document", "HtmlCanvasElement", "WebGlBuffer",
"WebGlFramebuffer", "WebGlProgram","WebGlRenderingContext", "WebGlShader", "WebGlTexture", "WebGlUniformLocation"] }
winit = { version = "0.26.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.9.0", features = ["tokio1"] }
glium = "0.31.0"
httpdate = "0.3.2"
hyper = { version = "0.14.2", features = ["server", "http1"] }
notify = "4.0.15"
uuid = { version = "0.8.1", features = ["v4"] }
webbrowser = "0.5.4"
winit = "0.26.1"
